Fixed stats container overflowing from parent container.

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@ main {
   align-items: center;
   justify-content: center;
   max-width: 720px;
-  /* height: 720px; */
 }
 
 .language-buttons {
@@ -139,20 +138,17 @@ main {
   justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
-  /* margin: 30px, 100px; */
   border-radius: 20px;
   background-color: #f5f5f5;
   line-height: 2rem;
   width: 200px;
-  /* height: 250px; */
   padding: 10px 0px;
 }
 
 .statsContainer {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
 
   align-items: center;
-  height: 300px;
+  height: 500px;
 }
